012 ==> 372326 - digiKam crashed when closing it.
013 ==> 372314 - I cannot choose the template predefined in the import window while renaming (F2).
014 ==> 372164 - Camera related photograph properties are unavailable (erroneously).
015 ==> 372433 - Reduce debug messages from databaseserver with internal mysql.
016 ==> 372442 - Ordering of duplicates search by the result count is done lexicographically [patch].
017 ==> 366567 - Allow choosing several duplicate results [patch].
018 ==> 274360 - Fuzzy search finds only in few type of pictures.
019 ==> 372380 - Support for digiKam 5.2.0.
020 ==> 372484 - HTML captions only show in right side panel as rendered, not editable source.
021 ==> 372323 - Camera autodetection fails when using AppImage bundle.
022 ==> 372583 - The Similarity in DuplicatesSearch and FuzzySearch should be renamed to Similarity range [patch].
023 ==> 372584 - It is not possible to give a similarity range for duplicates search in maintenance dialog [patch].
024 ==> 372683 - Attempt to set a screen on a child window and DBusMenuExporterPrivate::fillLayoutItem No id for action.
025 ==> 372640 - Can't drag any image file from digikam to GIMP.
026 ==> 370150 - digiKam geolocation editor drag and drop works only at the first edit.
027 ==> 372672 - File Renaming Options sidebar is missing.
028 ==> 372722 - Missing items in albums.
029 ==> 204006 - Automatic renaming of duplicate filenames while importing.
030 ==> 372312 - Database upgrade v7 to v8 failed.
031 ==> 366162 - After exporting the images in picasa or yandex photo they are not visible in digiKam.
032 ==> 261417 - Duplicate image counter is not adjusted when removing a duplicate [patch].
033 ==> 354232 - Lens information is always "unavailable" for Pentax K-S1 images.
034 ==> 372684 - No thumbnail shows for some files.
035 ==> 372781 - The recent similarity range is not saved which may lead to odd results [patch].
036 ==> 372831 - Digikam crashes when trying to fix red eyes.
037 ==> 